--- a/home.html
+++ b/home.html
@@ -5,5 +5,6 @@
 		<h1>HELLO WORLD!</h1>
 		<p>Olá, Word!</p>
 		<strong>Strong</strong>
+		<img href="" alt="Esta imagem descreve nada"/>
 	</body>
 </html>
