--- a/home.html
+++ b/home.html
@@ -3,8 +3,8 @@
 	</head>
 	<body>
 		<h1>HELLO WORLD!</h1>
-		<p>Olá, Word!</p>
 		<strong>Strong</strong>
 		<img href="" alt="Esta imagem descreve nada"/>
+		<h2>Testando</h2>
 	</body>
 </html>
